<resources>
    <string name="app_name">Main Project App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_first_login">Login</string>
    <string name="text_first_email">Email</string>
    <string name="text_first_password">Password</string>
    <string name="button_first_register">REGISTER</string>
    <string name="button_first_success">SIGN IN</string>
    <string name="text_second_email">Email</string>
    <string name="text_second_password">Password</string>
    <string name="text_second_retypePassword">Retype Password</string>
    <string name="text_connection_FriendA">Friend A</string>
    <string name="text_connection_FriendB">Friend B</string>
    <string name="text_weather_currentForecast">Current Weather</string>
    <string name="text_weather_futureForecast">Future Forecast</string>
    <string name="text_weather_locationWeather">Weather by Location</string>
    <string name="text_register_passwordHint1">Make sure Passwords are at least 8 characters</string>
    <string name="text_register_passwordHint2">with at least one Uppercase Letter and Special Character.</string>
    <string name="text_recover">Forget Password?</string>
    <string name="text_recovery_title">Recover your password</string>
    <string name="text_change_title">Change Your Password</string>
    <string name="button_hint_old_pw">Old Password</string>
    <string name="button_hint_new_pw">New Password</string>
    <string name="button_hint_new_pw_retype">Retype Password</string>
    <string name="text_resend_hint">Resend Verification</string>
    <string name="text_resend_title">Resend Verficiation Email!</string>

    <string name="button_second_register">REGISTER</string>
    <string name="button_friend_Remove">Remove Friend</string>
    <string name="button_friend_sendMessage">Send Message</string>
    <string name="button_weather_back">Back</string>
    <string name="button_send">Send</string>
    <string name="text_third_message">TEST</string>

    <string name="base_url">https://app-backend-server.herokuapp.com/</string>


    <string name="text_chatroom_chatroom"><u>Your Chatrooms: </u></string>

    <string name="text_connection_friend"><u>Friends List:  </u></string>

    <string name="text_status_contact">STATUS:   <font fgcolor='#FFA000'>Pending</font></string>



    <string name="keys_json_connection_response">response</string>
    <string name="keys_json_connection_data">data</string>
    <string name="keys_json_connection_email">email</string>
    <string name="keys_json_chatroom_name">name</string>


    <string name="title_home">Home</string>
    <string name="title_blogs">Blogs</string>
    <string name="title_connection">Connection</string>
    <string name="title_weather">Weather</string>
    <string name="title_chat"><b>Chatrooms</b></string>

    <string name="hint_email">Enter your email address</string>
    <string name="action_signin">Sign In</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_request">Request</string>
    <string name="action_current">Current</string>
    <string name="action_forecast">Forecast</string>
    <string name="action_location">Location</string>

    <string name="action_link">Full Post</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_nickname">Nickname</string>

    <string name="text_verification">A link has been sent to your email to verify your account.</string>
    <string name="button_continue">Continue</string>

    <string name="title_color_tropical">Tropical</string>
    <string name="title_color_db">Dark Blue</string>
    <string name="title_color_muted">Muted</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Chat Fragment -->
    <string name="button_chatfragment_groupA">Group A</string>
    <string name="button_chatfragment_groupB">Group B</string>
    <string name="button_chatfragment_groupC">Group C</string>

    <!-- GroupA Fragment -->
    <string name="title_groupfragmentA">Group Chat A</string>

    <!-- GroupB Fragment -->
    <string name="title_groupfragmentB">Group Chat B</string>

    <!-- GroupC Fragment -->
    <string name="title_groupfragmentC">Group Chat C</string>

    <!-- Location Fragment -->
    <string name="label_locationfragment_location">Click Anywhere On Map To Get Weather Update</string>

    <!-- Weather Fragment -->
    <string name="label_weatherfragment_current">Current</string>
    <string name="label_weatherfragment_hourly">Hourly</string>
    <string name="label_weatherfragment_forecast">Forecast</string>
    <string name="text_weatherfragment_current">Current</string>
    <string name="text_weatherfragment_hourly">Hourly</string>
    <string name="text_weatherfragment_forecast">Forecast</string>

    <!-- ZipCode Fragment -->
    <string name="text_zipcodefragment_enter">Enter A Zip Code To Look Up Weather</string>
    <string name="text_zipcodefragment_zipcode">Zip Code</string>


    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="title_activity_maps">Map</string>

    <string name="button_text_hint_add_contacts">Add A New Contact</string>
    <string name="button_add_hint">Add</string>
    <string name="button_pending_hint">Pending Contacts</string>
    <string name="button_decline_hint">Decline</string>
    <string name="button_sent_hint">Sent Requests</string>
    <string name="button_create_chatroom">Create A Chatroom</string>
    <string name="text_contact">Contacts</string>
    <string name="text_create">Create Chatroom</string>
    <string name="create_hint">Group Chat Name</string>
</resources>