<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_graph"
    app:startDestination="@id/navigation_current">
    <fragment
        android:id="@+id/navigation_current"
        android:name="edu.uw.main.ui.weather.WeatherFragment"
        android:label="@string/text_weather_currentForecast"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_forecast"
        android:name="edu.uw.main.ui.weather.ForecastFragment"
        android:label="@string/text_weather_futureForecast"
        tools:layout="@layout/fragment_forecast" />
    <fragment
        android:id="@+id/navigation_location"
        android:name="edu.uw.main.ui.weather.LocationFragment"
        android:label="@string/text_weather_locationWeather"
        tools:layout="@layout/fragment_location" />
</navigation>