<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment" >

    <EditText
        android:id="@+id/text_email"
        android:layout_width="336dp"
        android:layout_height="46dp"
        android:layout_marginTop="308dp"
        android:ems="10"
        android:hint="@string/text_second_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_repaswd"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/text_second_retypePassword"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_password"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="341dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/text_second_password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_email"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <Button
        android:id="@+id/button_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="48dp"
        android:text="@string/button_second_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>