<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.main.ui.auth.SuccessFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_success" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.main.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_navigation_chat_to_groupFragment"
            app:destination="@id/groupFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_connection"
        android:name="edu.uw.main.ui.connection.ConnectionFragment"
        android:label="@string/title_connection"
        tools:layout="@layout/fragment_connection">
        <action
            android:id="@+id/action_connectionFragment_to_friendFragment"
            app:destination="@id/friendFragment" />
        <action
            android:id="@+id/action_connectionFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/friendFragment"
        android:name="edu.uw.main.ui.connection.FriendFragment"
        android:label="fragment_friend"
        tools:layout="@layout/fragment_friend" />
    <fragment
        android:id="@+id/WeatherActivity"
        android:name="edu.uw.main.ui.weather.WeatherFragment"
        android:label="fragment_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/groupFragment"
        android:name="edu.uw.main.ui.chat.GroupFragment"
        android:label="fragment_group"
        tools:layout="@layout/fragment_group" />
</navigation>
