<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_root"
        android:name="edu.uw.main.ui.connection.ConnectionFragment"
        android:layout_width="400dp"
        android:layout_height="330dp"
        android:layout_marginBottom="16dp"

        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/text_friend"
        app:layout_constraintTop_toBottomOf="@+id/text_friend"
        app:layout_constraintVertical_bias="1.0"
        tools:context="edu.uw.main.ui.connection.connectionList.ConnectionListFragment"
        tools:listitem="@layout/fragment_connection_card" />

    <Button
        android:id="@+id/button_add_contacts"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_text_hint_add_contacts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_pending"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_pending_hint"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_contacts" />

    <Button
        android:id="@+id/button_sent_requests"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_sent_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_pending" />

    <TextView
        android:id="@+id/text_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_connection_friend"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sent_requests" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_pending"
        app:srcCompat="?attr/selectableItemBackground" />


</androidx.constraintlayout.widget.ConstraintLayout>
