<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connection.ConnectionFragment">

    <ImageButton
        android:id="@+id/button_search"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_send_black_24dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_search"
        android:layout_width="331dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/action_search"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/sendButton2"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="92dp"
        android:text="@string/action_request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/friendA"
        android:layout_width="225dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="172dp"
        android:text="@string/text_connection_FriendA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>