<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.ChatCreate">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_root"
        android:name="edu.uw.main.ui.chat.ChatCreate"
        android:layout_width="411dp"
        android:layout_height="411dp"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:context="edu.uw.main.ui.chat.ChatCreate"
        tools:listitem="@layout/fragment_chat_create_card" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/text_contact"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/list_root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="126dp"
        android:layout_height="68dp"
        android:text="@string/button_create_chatroom"
        app:layout_constraintBottom_toTopOf="@+id/list_root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/text_group_name"
        android:layout_width="235dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/create_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/list_root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>